# nixl

./: CODEOWNERS  README.md  install_nixl.py  meson.build  meson_options.txt  nixl_api_test.py  nixl_receiver.py  nixl_sender.py
benchmark/nixlbench/contrib/ofi/: Dockerfile.nixlbase  Dockerfile.nixlbench  build.sh
benchmark/nixlbench/src/utils/: utils.cpp  utils.h
benchmark/nixlbench/src/worker/nixl/: nixl_worker.cpp
examples/python/ofi/: nixl_api.py
src/core/: nixl_plugin_manager.cpp
src/plugins/: meson.build
src/plugins/libfabric/: libfabric_backend.cpp  libfabric_backend.h  meson.build
src/plugins/ofi/: ofi_backend.cpp  ofi_backend.h  ofi_plugin.cpp
src/utils/libfabric/: libfabric_common.cpp  libfabric_common.h  libfabric_rail.cpp  libfabric_rail.h  libfabric_rail_manager.cpp  libfabric_rail_manager.h  libfabric_topology.cpp  libfabric_topology.h  meson.build
test/nixl/: meson.build  nixl_test.cpp
test/unit/plugins/: meson.build
test/unit/plugins/libfabric/: meson.build  test_libfabric_descriptor_offsets.cpp
test/unit/plugins/ofi/: ofi_backend_test.cpp
test/utils/: meson.build  synapseai_utils.cpp  synapseai_utils.h
